syntax = "proto3";
package Services.Users;
option csharp_namespace = "UsersService";

service UsersService {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUserById (DeleteUserByIdRequest) returns (DeleteUserByIdResponse);
}

message GetUserByIdRequest {
  int32 user_id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserByIdRequest {
  int32 user_id = 1;
}

message DeleteUserByIdResponse {
  bool success = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}